--- a/leaderboard_1.0/jobs/carla-benchmark-job.yaml
+++ b/leaderboard_1.0/jobs/carla-benchmark-job.yaml
@@ -63,10 +63,11 @@ spec:
             limits:
               nvidia.com/gpu: 1
         - name: agent-1
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-586a194d-team-403:efac48dd-abc1-47e2-bd3b-89c036b5faeb
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-72e0bac2-team-177:44d4c9b5-8015-4b97-8a33-7dd160fc5722
           command: ["/bin/bash", "-c"]
           args:
             - |
+              pip3 install --force-reinstall torch==1.11.0+cu113 torchvision==0.12.0+cu113 torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cu113
               bash /workspace/leaderboard/run_leaderboard.sh
           volumeMounts:
             - mountPath: /workspace/leaderboard
@@ -123,10 +124,11 @@ spec:
             limits:
               nvidia.com/gpu: 1
         - name: agent-2
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-586a194d-team-403:efac48dd-abc1-47e2-bd3b-89c036b5faeb
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-72e0bac2-team-177:44d4c9b5-8015-4b97-8a33-7dd160fc5722
           command: ["/bin/bash", "-c"]
           args:
             - |
+              pip3 install --force-reinstall torch==1.11.0+cu113 torchvision==0.12.0+cu113 torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cu113
               bash /workspace/leaderboard/run_leaderboard.sh 
           volumeMounts:
             - mountPath: /workspace/leaderboard
@@ -183,10 +185,11 @@ spec:
             limits:
               nvidia.com/gpu: 1
         - name: agent-3
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-586a194d-team-403:efac48dd-abc1-47e2-bd3b-89c036b5faeb
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-72e0bac2-team-177:44d4c9b5-8015-4b97-8a33-7dd160fc5722
           command: ["/bin/bash", "-c"]
           args:
             - |
+              pip3 install --force-reinstall torch==1.11.0+cu113 torchvision==0.12.0+cu113 torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cu113
               bash /workspace/leaderboard/run_leaderboard.sh 
           volumeMounts:
             - mountPath: /workspace/leaderboard
@@ -243,10 +246,11 @@ spec:
             limits:
               nvidia.com/gpu: 1
         - name: agent-4
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-586a194d-team-403:efac48dd-abc1-47e2-bd3b-89c036b5faeb
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-72e0bac2-team-177:44d4c9b5-8015-4b97-8a33-7dd160fc5722
           command: ["/bin/bash", "-c"]
           args:
             - |
+              pip3 install --force-reinstall torch==1.11.0+cu113 torchvision==0.12.0+cu113 torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cu113
               bash /workspace/leaderboard/run_leaderboard.sh
           volumeMounts:
             - mountPath: /workspace/leaderboard
@@ -281,7 +285,7 @@ spec:
               bash /workspace/run_logcopy.sh
           env:
             - name: SUBMISSION_ID
-              value: leaderboard-10-test-1
+              value: leaderboard-10-test-PerceptionX
           volumeMounts:
             - mountPath: /logs
               name: logs
