--- a/leaderboard_2.0/docker/leaderboard/Dockerfile
+++ b/leaderboard_2.0/docker/leaderboard/Dockerfile
@@ -6,7 +6,7 @@ ENV CARLA_PYTHON_API_ROOT "/workspace/CARLA"
 ENV SCENARIO_RUNNER_ROOT "/workspace/scenario_runner"
 ENV LEADERBOARD_ROOT "/workspace/leaderboard"
 
-COPY PythonAPI ${CARLA_PYTHON_API_ROOT}}/PythonAPI
+COPY PythonAPI ${CARLA_PYTHON_API_ROOT}/PythonAPI
 COPY scenario_runner ${SCENARIO_RUNNER_ROOT}
 COPY leaderboard ${LEADERBOARD_ROOT}
 
