--- a/leaderboard_1.0/tests/test-carla-benchmark-job.yaml
+++ b/leaderboard_1.0/tests/test-carla-benchmark-job.yaml
@@ -35,7 +35,7 @@ spec:
       containers:
         # First set of simulator + agent
         - name: simulator-1
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/challenge-simulator:latest
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-simulator-testing:latest
           command: ["/bin/bash", "-c"]
           args:
             - |
@@ -64,11 +64,11 @@ spec:
             limits:
               nvidia.com/gpu: 1
         - name: agent-1
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-72e0bac2-team-177:44d4c9b5-8015-4b97-8a33-7dd160fc5722
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-586a194d-team-403:efac48dd-abc1-47e2-bd3b-89c036b5faeb
           command: ["/bin/bash", "-c"]
           args:
             - |
-              bash /workspace/leaderboard/run_leaderboard.sh
+              bash /workspace/leaderboard/run_leaderboard_test.sh
           volumeMounts:
             - mountPath: /workspace/leaderboard
               name: leaderboard
@@ -88,7 +88,7 @@ spec:
             - name: CHALLENGE_TRACK_CODENAME
               value: "SENSORS"
             - name: ROUTES_SUBSET
-              value: "0-4"
+              value: "0"
             - name: RESUME
               value: ""
             - name: NVIDIA_DRIVER_CAPABILITIES
@@ -98,7 +98,7 @@ spec:
 
         # Second set of simulator + agent
         - name: simulator-2
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/challenge-simulator:latest
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-simulator-testing:latest
           command: ["/bin/bash", "-c"]
           args:
             - |
@@ -127,11 +127,11 @@ spec:
             limits:
               nvidia.com/gpu: 1
         - name: agent-2
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-72e0bac2-team-177:44d4c9b5-8015-4b97-8a33-7dd160fc5722
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-586a194d-team-403:efac48dd-abc1-47e2-bd3b-89c036b5faeb
           command: ["/bin/bash", "-c"]
           args:
             - |
-              bash /workspace/leaderboard/run_leaderboard.sh
+              bash /workspace/leaderboard/run_leaderboard_test.sh
           volumeMounts:
             - mountPath: /workspace/leaderboard
               name: leaderboard
@@ -151,7 +151,7 @@ spec:
             - name: CHALLENGE_TRACK_CODENAME
               value: "SENSORS"
             - name: ROUTES_SUBSET
-              value: "5-9"
+              value: "0"
             - name: RESUME
               value: ""
             - name: NVIDIA_DRIVER_CAPABILITIES
@@ -161,7 +161,7 @@ spec:
 
         # Third set of simulator + agent
         - name: simulator-3
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/challenge-simulator:latest
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-simulator-testing:latest
           command: ["/bin/bash", "-c"]
           args:
             - |
@@ -190,11 +190,11 @@ spec:
             limits:
               nvidia.com/gpu: 1
         - name: agent-3
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-72e0bac2-team-177:44d4c9b5-8015-4b97-8a33-7dd160fc5722
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-586a194d-team-403:efac48dd-abc1-47e2-bd3b-89c036b5faeb
           command: ["/bin/bash", "-c"]
           args:
             - |
-              bash /workspace/leaderboard/run_leaderboard.sh
+              bash /workspace/leaderboard/run_leaderboard_test.sh
           volumeMounts:
             - mountPath: /workspace/leaderboard
               name: leaderboard
@@ -214,7 +214,7 @@ spec:
             - name: CHALLENGE_TRACK_CODENAME
               value: "SENSORS"
             - name: ROUTES_SUBSET
-              value: "10-14"
+              value: "0"
             - name: RESUME
               value: ""
             - name: NVIDIA_DRIVER_CAPABILITIES
@@ -224,7 +224,7 @@ spec:
 
         # Four set of simulator + agent
         - name: simulator-4
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/challenge-simulator:latest
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-simulator-testing:latest
           command: ["/bin/bash", "-c"]
           args:
             - |
@@ -253,11 +253,11 @@ spec:
             limits:
               nvidia.com/gpu: 1
         - name: agent-4
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-72e0bac2-team-177:44d4c9b5-8015-4b97-8a33-7dd160fc5722
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-586a194d-team-403:efac48dd-abc1-47e2-bd3b-89c036b5faeb
           command: ["/bin/bash", "-c"]
-          args:
+          args: 
             - |
-              bash /workspace/leaderboard/run_leaderboard.sh
+              bash /workspace/leaderboard/run_leaderboard_test.sh
           volumeMounts:
             - mountPath: /workspace/leaderboard
               name: leaderboard
@@ -277,7 +277,7 @@ spec:
             - name: CHALLENGE_TRACK_CODENAME
               value: "SENSORS"
             - name: ROUTES_SUBSET
-              value: "15-19"
+              value: "0"
             - name: RESUME
               value: ""
             - name: NVIDIA_DRIVER_CAPABILITIES
@@ -294,7 +294,7 @@ spec:
               bash /workspace/run_logcopy.sh
           env:
             - name: SUBMISSION_ID
-              value: leaderboard-10-submission-id
+              value: test-carla-benchmark-job
           volumeMounts:
             - mountPath: /logs
               name: logs
